--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <label for="name">Name:</label>
         <input type="text"> <br>
         <label for="name">Phone:</label>
-        <input type="number">
+        <input type="number"> <br>
+        <input type="submit">
     </form>
 </body>
 
