--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 
     <style>
         h1 {
@@ -26,13 +27,22 @@
 
 <body>
     <h1>Javascript Exercise</h1>
-    <form action="">
+    <form action="" class="form-a">
         <label for="name">Name:</label>
         <input type="text"> <br>
         <label for="name">Phone:</label>
         <input type="number"> <br>
         <input type="submit">
     </form>
+
+    <button class="btn">Button</button>
+
+
+
+
+
+
+
 </body>
 
 <script src="index.js"></script>
