Copy -paste event are working

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 
-<body>
+<body id="sanjoy">
     <h1>Javascript Exercise</h1>
     <form action="" class="form-a">
         <label for="name">Name:</label>
@@ -35,7 +35,7 @@
         <input type="submit">
     </form>
 
-    <button class="btn">Button</button>
+    <button class="btn" id="btn">Change BG</button>
 
 
 
